# kboard-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  log.rs  main.rs
src/component/: command.rs  mod.rs
src/event/: events.rs  key.rs
